[tool.poetry]
name = "streamlit-url-fragment"
version = "0.1.0"
description = "Get the URL fragment (part after #) from Streamlit"
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = ">0.63"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
