[tool.poetry]
name = "streamlit-url-fragment"
version = "0.2.1"
description = "Get the URL fragment (part after #) from Streamlit"
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"

include = [
    "streamlit_url_fragment/build/**/*",
]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = ">0.63"
importlib-resources = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
